# batgrl

./: .buildinfo  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  LICENSE.Apache-2.0  LICENSE.MIT  README-PYPI.md  README.md  README.rst  README_RST.rst  genindex.html  index.html  objects.inv  optional-requirements.txt  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  uncrustify.cfg
.doctrees/: environment.pickle  index.doctree
.doctrees/reference/: index.doctree
.doctrees/user/: batgrl_faq.doctree  gadget_tree.doctree  gadgets.doctree  index.doctree  pong_tutorial.doctree
.github/: dependabot.yaml
.github/workflows/: python-publish.yaml  sphinx-docs.yaml
_sources/: index.rst.txt
_sources/reference/: index.rst.txt
_sources/user/: batgrl_faq.rst.txt  gadget_tree.rst.txt  gadgets.rst.txt  index.rst.txt
batgrl/: __init__.py  app.py  easings.py  emojis.py  figfont.py  figfonts.py  geometry.py  spinners.py
batgrl/colors/: __init__.py  color_types.py  colors.py  gradients.py
batgrl/gadgets/: __init__.py  _batgrl_markdown.py  _root.py  animation.py  bar_chart.py  box_image.py  braille_image.py  braille_video_player.py  button.py  color_picker.py  console.py  data_table.py  digital_display.py  file_chooser.py  flat_toggle.py  gadget.py  gadget_base.py  graphic_field.py  graphics.py  grid_layout.py  image.py  line_plot.py  markdown.py  menu.py  pane.py  parallax.py  progress_bar.py  raycaster.py  scroll_view.py  shadow_caster.py  slider.py  sparkline.py  split_layout.py  stack_layout.py  tabs.py  text.py  text_animation.py  text_field.py  text_pad.py  text_tools.py  (+7 more)
batgrl/io/: README.md  __init__.py  win32_types.py
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  regen_docs.py  requirements.txt  search.html  searchindex.js
docs/_autosummary/: nurses_2.app.html  nurses_2.clamp.html  nurses_2.colors.color_data_structures.html  nurses_2.io.input.events.html  nurses_2.io.output.vt100.html  nurses_2.widgets.behaviors.button_behavior.html  nurses_2.widgets.behaviors.focus_behavior.html  nurses_2.widgets.behaviors.scatter_behavior.html  nurses_2.widgets.behaviors.themable.html  nurses_2.widgets.button.html  nurses_2.widgets.graphic_widget_data_structures.html  nurses_2.widgets.grid_layout.html  nurses_2.widgets.line_plot.html  nurses_2.widgets.line_plot.line_plot.html  nurses_2.widgets.parallax.html  nurses_2.widgets.particle_field.text_field.html  nurses_2.widgets.ray_caster.html  nurses_2.widgets.ray_caster.ray_caster.html  nurses_2.widgets.scroll_view.indicators.html  nurses_2.widgets.scroll_view.scroll_view.html  nurses_2.widgets.shadow_caster.shadow_caster_data_structures.html  nurses_2.widgets.slider.slider.html  nurses_2.widgets.video_player.html
docs/_sources/: index.rst.txt
docs/_static/: classic.css  documentation_options.js
docs/html/: objects.inv  search.html  searchindex.js
docs/reference/: index.html  index.rst
docs/source/: conf.py  index.rst
docs/toctree/: nurses_2.app.html  nurses_2.clamp.html  nurses_2.colors.color_data_structures.html  nurses_2.colors.colors.html  nurses_2.colors.gradients.html  nurses_2.colors.html  nurses_2.data_structures.html  nurses_2.easings.html  nurses_2.html  nurses_2.io.html  nurses_2.io.input.events.html  nurses_2.io.input.html  nurses_2.io.input.keys.html  nurses_2.io.input.vt100.ansi_escapes.html  nurses_2.io.input.vt100.console_input.html  nurses_2.io.input.vt100.html  nurses_2.io.input.vt100.mouse_bindings.html  nurses_2.io.input.vt100.vt100_input.html  nurses_2.io.input.win32.console_input.html  nurses_2.io.input.win32.html  nurses_2.io.input.win32.key_codes.html  nurses_2.io.input.win32.win32_input.html  nurses_2.io.output.html  nurses_2.io.output.vt100.html  nurses_2.io.output.windows10.html  nurses_2.io.win32_types.html  nurses_2.widgets.animation.html  nurses_2.widgets.behaviors.button_behavior.html  nurses_2.widgets.behaviors.effect.html  nurses_2.widgets.behaviors.effects.effect.html  nurses_2.widgets.behaviors.effects.html  nurses_2.widgets.behaviors.effects.rainbow_cycle_effect.html  nurses_2.widgets.behaviors.focus_behavior.html  nurses_2.widgets.behaviors.grab_move_behavior.html  nurses_2.widgets.behaviors.grab_resize_behavior.html  nurses_2.widgets.behaviors.grabbable_behavior.html  nurses_2.widgets.behaviors.html  nurses_2.widgets.behaviors.scatter_behavior.html  nurses_2.widgets.behaviors.themable.html  nurses_2.widgets.behaviors.toggle_button_behavior.html  (+46 more)
docs/user/: batgirl_faq.rst  gadget_tree.rst  gadgets.rst  handling_input.html  index.html  index.rst  nurses_2_faq.html  pong_tutorial.html  pong_tutorial.rst  widget_tree.html  widgets.html  widgets.rst
docsrc/: conf.py  index.rst  regen_docs.py
docsrc/reference/: index.rst
docsrc/user/: handling_input.rst  (+5 more)
examples/: animation.py  animation_example.py  aztec_gold.py  basic_example_1.py  basic_example_2.py  basic_example_3.py  basic_example_4.py  bouncing_widgets.py  braille_example.py  braille_image.py  button_example.py  buttons.py  code_rain_logo.py  color_picker.py  digital_clock.py  doom_fire.py  easings.py  exploding_logo.py  exploding_logo_redux.py  file_chooser.py  first_render.py  focus_windows.py  graph_app_example.py  graph_app_exploding.py  image.py  image_example.py  isotiles.py  key_presses.py  line_plot.py  mandelbrot.py  menu.py  mouse_events.py  movie_player.py  navier_stokes.py  parallax.py  parallax_example.py  paste.py  paste_example.py  plot2d.py  pong.py  (+17 more)
nurses_2/: __init__.py  __main__.py  app.py  clamp.py  color.py  colors.py  data_structures.py  easings.py  fonts.py  geometry.py  mouse.py  panel.py  screen.py  spinners.py  transitions.py  utils.py
reference/: index.html
user/: batgrl_faq.html  gadget_tree.html  gadgets.html  index.html  pong_tutorial.html
(+901 files in other folders)
