[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "batgrl"
description = "badass terminal graphics library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "salt-die", email = "salt-die@protonmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.2",
    "opencv-python>=4.5.4.58",
    "wcwidth>=0.2.5",
    "Pygments>=2.16.1",
    "mistletoe>=1.2.1",
]
dynamic = ["version"]

[project.urls]
"repository" = "https://github.com/salt-die/batgrl"
"documentation" = "https://salt-die.github.io/batgrl/index.html"

[tool.setuptools.dynamic]
version = {attr = "batgrl.__version__"}

[tool.setuptools.packages.find]
exclude = [
    "docs**",
    "examples**",
    "preview_images**",
]

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "F",  # pyflakes
    "E",  # pycodestyle - error
    "W",  # pycodestyle - warning
    "I",  # isort
]
ignore = [
    "D105",  # undocumented-magic-method
    "D205",  # blank-line-after-summary -- This rule seems bugged for summaries that need more than one line.
]
fixable = ["ALL"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.pycodestyle]
max-doc-length=88
