[build-system]
requires = ["setuptools", "Cython >= 3.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "batgrl"
description = "badass terminal graphics library"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "salt-die", email = "salt-die@protonmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "Pygments>=2.17.2",
    "mistletoe>=1.3.0",
]
dynamic = ["version"]

[project.urls]
"repository" = "https://github.com/salt-die/batgrl"
"documentation" = "https://salt-die.github.io/batgrl/index.html"

[tool.setuptools.dynamic]
version = {attr = "batgrl.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "docs**",
    "examples**",
    "preview_images**",
]

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "F",  # pyflakes
    "E",  # pycodestyle - error
    "W",  # pycodestyle - warning
    "I",  # isort
]
ignore = [
    "D105",  # undocumented-magic-method
    "D205",  # blank-line-after-summary -- This rule seems bugged for summaries that need more than one line.
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length=88
