[build-system]
requires = [
    "Cython>=3.0.3",
    "numpy>=2.0.0",
    "packaging>=25.0",
    "setuptools>=80.7.1",
    "uwcwidth>=1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "batgrl"
description = "badass terminal graphics library"
readme = "README-PYPI.md"
requires-python = ">=3.12"
license = "MIT AND Apache-2.0"
authors = [{name = "salt-die", email = "salt-die@protonmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mistletoe>=1.3.0",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "Pygments>=2.17.2",
    "ugrapheme>=0.8",
    "uwcwidth>=1.0.0",
]
dynamic = ["version"]

[project.urls]
"repository" = "https://github.com/salt-die/batgrl"
"documentation" = "https://salt-die.github.io/batgrl/index.html"

[tool.setuptools.dynamic]
version = {attr = "batgrl.__version__"}

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "F",  # pyflakes
    "E",  # pycodestyle - error
    "W",  # pycodestyle - warning
    "I",  # isort
]
ignore = [
    "D105",  # undocumented-magic-method
    "D205",  # blank-line-after-summary -- This rule seems bugged for summaries that need more than one line.
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length=88

[tool.cython-lint]
max-line-length = 88

[tool.pyright]
ignore = ["**/examples/*"]
pythonPlatform = "All"
