[metadata]
name = nurses_2
version = attr: nurses_2.__init__.__version__
author = salt-die
description = Widget and async-centric library for terminal graphics.
url = https://github.com/salt-die/nurses_2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
