[metadata]
name = nurses_2
version = attr: nurses_2.__version__
author = salt-die
author_email = salt-die@protonmail.com
description = Widget and async-centric library for terminal graphics.
long_description = file: README_RST.rst
url = https://github.com/salt-die/nurses_2
license = MIT
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
